<resources>
    <string name="app_name">Yubico Authenticator WearOS</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="no_key_logo">no key logo</string>
    <string name="no_yubikey_caption">no yubikey caption</string>
    <string name="tap_your_yubikey">Tap your YubiKey</string>
    <string name="no_nfc_available_icon">no nfc available icon</string>
    <string name="nfc_disabled_caption">nfc disabled caption</string>
    <string name="nfc_is_disabled">NFC is disabled</string>
</resources>
