<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="UseCompoundDrawables">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:contentDescription="@string/no_nfc_available_icon"
        android:paddingTop="64dp"
        app:srcCompat="?android:attr/alertDialogIcon" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/nfc_disabled_caption"
        android:gravity="center_horizontal"
        android:paddingVertical="16dp"
        android:text="@string/nfc_is_disabled" />
</LinearLayout>
